--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container box_1620">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					
+
 					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -60,21 +60,24 @@
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
 							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
 							</li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+									Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							
+
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
 							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">Register</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
@@ -169,7 +172,7 @@
 
 
 	<!--================ start footer Area  =================-->
-	<footer class="footer-area pad_top pad_btm_50">
+	<footer class="footer-area pad_top pad_btm_50" height="auto">
 		<div class="container">
 			<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
@@ -177,22 +180,21 @@
 					<div class="single-footer-widget tp_widgets">
 						<h6 class="footer_title">Contact Us</h6>
 						Vasavi College of Engineering<br />
-						<em><small> (Private Un-aided Non-minority
-								Autonomous Institution)<br /></small></em>
-						Affiliated to Osmania University, Hyderabad <br />
-						Approved by AICTE, New Delhi<br />
+						<em><small> (Autonomous)<br /></small></em>
+						<p>Affiliated to Osmania University, Hyderabad </p>
+						<br />Approved by AICTE, New Delhi<br />
 						9-5-81, Ibrahimbagh<br />
 						Hyderabad - 500 031<br />
 						Telangana, India<br /><br />
 
-						Tel: +91 40 23146003<br />
-						Fax: +91 40 23146090<br /> <br />
+						Tel: +91 40 23146020<br />
+						Tel: +91 40 23146021<br /> <br />
 
 						<!-- <a
 							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
 								   class="__cf_email__"
 								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-						Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
+						Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
 					</div>
 				</div>
 
@@ -226,7 +228,9 @@
 			</div>
 			<div class="row footer-bottom d-flex justify-content-between align-items-center">
 				<p class="col-lg-8 col-md-8 footer-text m-0">
-					Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
+					Ibrahimbagh, Hyderabad, India. All
 					Rights Reserved.</p>
 				<div class="col-lg-4 col-md-4 footer-social">
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
