--- a/details.html
+++ b/details.html
@@ -40,65 +40,68 @@
 <body>
 
     <!--================Header Menu Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-								</ul>
-							</li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-								</ul>
-							</li>
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">About</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                                </ul>
+                            </li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+                                    Venue</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Register</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
-							<!-- <li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================Header Menu Area =================-->
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!--================Header Menu Area =================-->
     <!--================Home Banner Area =================-->
     <section class="banner_area">
         <div class="banner_inner d-flex align-items-center">
@@ -124,9 +127,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event_text">
-                            <h3>Next Event will Start in</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore.</p>
+                            <h3>ABSTRACT SUBMISSION DEADLINE</h3>
+                            <p>Send your Registration within</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -165,11 +167,15 @@
                 <div class="col-lg-6 offset-lg-1" style="text-align: center; margin:auto;">
                     <div class="welcome_text" style="text-align: center; margin:auto;">
                         <h3>Welcome</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards especially in the workplace. That’s why it’s crucial that, as women, our behavior
-                            on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards especially in the workplace.</p>
+                        <p>The aim of this 4th International Conference on Smart Computing & Informatics (SCI-2020) is
+                            to present a unified platform for advanced and multi-disciplinary research towards design of
+                            smart computing and informatics. The theme is on a broader front focuses on various
+                            innovation paradigms in system knowledge, intelligence and sustainability that may be
+                            applied to provide realistic solutions to varied problems in society, environment and
+                            industries. The scope is also extended towards deployment of emerging computational and
+                            knowledge transfer approaches, optimizing solutions in varied disciplines of science,
+                            technology and healthcare.The conference proceeding aims publication of quality and
+                            unpublished work pertaining to specific topics of interest as mentioned in CFP.</p>
 
                     </div>
                 </div>
@@ -200,22 +206,21 @@
                     <div class="single-footer-widget tp_widgets">
                         <h6 class="footer_title">Contact Us</h6>
                         Vasavi College of Engineering<br />
-                        <em><small> (Private Un-aided Non-minority
-                                Autonomous Institution)<br /></small></em>
-                        Affiliated to Osmania University, Hyderabad <br />
-                        Approved by AICTE, New Delhi<br />
+                        <em><small> (Autonomous)<br /></small></em>
+                        <p>Affiliated to Osmania University, Hyderabad </p>
+                        <br />Approved by AICTE, New Delhi<br />
                         9-5-81, Ibrahimbagh<br />
                         Hyderabad - 500 031<br />
                         Telangana, India<br /><br />
 
-                        Tel: +91 40 23146003<br />
-                        Fax: +91 40 23146090<br /> <br />
+                        Tel: +91 40 23146020<br />
+                        Tel: +91 40 23146021<br /> <br />
 
                         <!-- <a
 							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
 								   class="__cf_email__"
 								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-                        Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
+                        Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
                     </div>
                 </div>
 
@@ -249,7 +254,9 @@
             </div>
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-md-8 footer-text m-0">
-                    Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
+                    Ibrahimbagh, Hyderabad, India. All
                     Rights Reserved.</p>
                 <div class="col-lg-4 col-md-4 footer-social">
                     <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
