--- a/register.html
+++ b/register.html
@@ -60,65 +60,68 @@
 <body>
 
     <!--================Header Menu Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-								</ul>
-							</li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-								</ul>
-							</li>
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">About</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                                </ul>
+                            </li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+                                    Venue</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Register</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
-							<!-- <li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================Header Menu Area =================-->
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -146,7 +149,7 @@
                     <div class="col-lg-6">
                         <div class="event_text">
                             <h3>Abstract of the Paper Deadline</h3>
-                            <p>Send the abstract of the paper within the  </p>
+                            <p>Send the abstract of the paper within the </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -183,7 +186,7 @@
     <section class="price_area p_120">
         <div class="container">
             <div class="main_title">
-                <h2>Registration Fee </h2>                
+                <h2>Registration Fee </h2>
             </div>
             <div class="price_inner row m0">
                 <div class="col-lg-3 col-sm-6 p0">
@@ -197,7 +200,7 @@
                                 <li><a href="#">Conference Kit</a></li>
                                 <li><a href="#">Lunch</a></li>
                                 <li><a href="#">Tea & Snacks</a></li>
-                                <li><a href="#">e-Proceedings</a></li>                                
+                                <li><a href="#">e-Proceedings</a></li>
                             </ul>
                         </div>
                         <a class="price_btn" href="#">Register Now</a>
@@ -214,10 +217,10 @@
                                 <li><a href="#">Conference Kit</a></li>
                                 <li><a href="#">Lunch</a></li>
                                 <li><a href="#">Tea & Snacks</a></li>
-                                <li><a href="#">e-Proceedings</a></li>                                
+                                <li><a href="#">e-Proceedings</a></li>
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Register Now</a>                    
+                        <a class="price_btn" href="#">Register Now</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 p0">
@@ -230,10 +233,10 @@
                                 <li><a href="#">Conference Kit</a></li>
                                 <li><a href="#">Lunch</a></li>
                                 <li><a href="#">Tea & Snacks</a></li>
-                                <li><a href="#">e-Proceedings</a></li> 
+                                <li><a href="#">e-Proceedings</a></li>
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Register Now</a>                    
+                        <a class="price_btn" href="#">Register Now</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 p0">
@@ -247,10 +250,10 @@
                                 <li><a href="#">Conference Kit</a></li>
                                 <li><a href="#">Lunch</a></li>
                                 <li><a href="#">Tea & Snacks</a></li>
-                                <li><a href="#">e-Proceedings</a></li> 
+                                <li><a href="#">e-Proceedings</a></li>
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Register Now</a>                    
+                        <a class="price_btn" href="#">Register Now</a>
                     </div>
                 </div>
             </div>
@@ -271,11 +274,11 @@
                             <h4 class="mb-20">Bank Details</h4>
                             <p>
                                 <ul class="list">
-                                    <li>Bank        : Syndicate Bank, VCE</li>
-                                    <li>Acc Name    : S. Vinay Kumar</li>
-                                    <li>Acc No      : 30592180000910</li>
-                                    <li>IFSC        :SYNB0003059</li>
-                                    <li>Address     : Vasavi College of Engineering</li>
+                                    <li>Bank : Syndicate Bank, VCE</li>
+                                    <li>Acc Name : S. Vinay Kumar</li>
+                                    <li>Acc No : 30592180000910</li>
+                                    <li>IFSC :SYNB0003059</li>
+                                    <li>Address : Vasavi College of Engineering</li>
                                 </ul>
                             </p>
                         </div>
@@ -313,22 +316,21 @@
                         <div class="single-footer-widget tp_widgets">
                             <h6 class="footer_title">Contact Us</h6>
                             Vasavi College of Engineering<br />
-                            <em><small> (Private Un-aided Non-minority
-                                    Autonomous Institution)<br /></small></em>
-                            Affiliated to Osmania University, Hyderabad <br />
-                            Approved by AICTE, New Delhi<br />
+                            <em><small> (Autonomous)<br /></small></em>
+                            <p>Affiliated to Osmania University, Hyderabad </p>
+                            <br />Approved by AICTE, New Delhi<br />
                             9-5-81, Ibrahimbagh<br />
                             Hyderabad - 500 031<br />
                             Telangana, India<br /><br />
 
-                            Tel: +91 40 23146003<br />
-                            Fax: +91 40 23146090<br /> <br />
+                            Tel: +91 40 23146020<br />
+                            Tel: +91 40 23146021<br /> <br />
 
                             <!-- <a
-                               href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
-                                   class="__cf_email__"
-                                   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-                            Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
+							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
+								   class="__cf_email__"
+								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
+                            Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
                         </div>
                     </div>
 
@@ -363,7 +365,9 @@
                 </div>
                 <div class="row footer-bottom d-flex justify-content-between align-items-center">
                     <p class="col-lg-8 col-md-8 footer-text m-0">
-                        Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
+                        Ibrahimbagh, Hyderabad, India. All
                         Rights Reserved.</p>
                     <div class="col-lg-4 col-md-4 footer-social">
                         <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
