--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -40,65 +40,68 @@
 <body>
 
     <!--================Header Menu Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-								</ul>
-							</li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-								</ul>
-							</li>
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">About</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                                </ul>
+                            </li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+                                    Venue</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Register</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
-							<!-- <li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================Header Menu Area =================-->
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -121,45 +124,45 @@
     <!--================Contact Area =================-->
     <div class="container" style="margin:50px auto;">
 
-			<h2>Paper submission guidelines/Call for Papers</h2>
-			<p>Authors are invited to submit full papers for
-			 consideration (maximum 10 pages) in SCI 2020.
-			  Submission of paper must be original and should
-			   not have been previously published or under consideration
-				for publication. All papers will be sent for peer review and the corresponding
-				 author will be notified of the outcome of the review process. The proceedings of the conference
-				  will expected to be published by Smart Innovation Systems and Technologies Series,
-				   Springer (Approved). Extended versions of selected best papers will expected to be appear
-					in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
-					 must register for the conference. All submissions are to be done electronically through easychair link.</p>
-			<ul class="list-group">
-				<li class="list-group-item" style="text-align: center;">Conference Focus Areas</li>	 
-				<li class="list-group-item" style="text-align: center;">Approximate Computing</li>
-				<li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
-				<li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
-				<li class="list-group-item" style="text-align: center;">Intelligent Control Agents</li>
-				<li class="list-group-item" style="text-align: center;">Optimization Techniques</li>
-				<li class="list-group-item" style="text-align: center;">Intelligent Agents</li>
-				<li class="list-group-item" style="text-align: center;">Soft Computing Techniques</li>
-				<li class="list-group-item" style="text-align: center;">Parallel & Scalable Computing</li>
-				<li class="list-group-item" style="text-align: center;">Internet of Things</li>
-				<li class="list-group-item" style="text-align: center;">Cloud & Fog Computing</li>
-				<li class="list-group-item" style="text-align: center;">Mobile Computing & Ad hoc Networks</li>
-				<li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
-				<li class="list-group-item" style="text-align: center;">Stream Mining</li>
-				<li class="list-group-item" style="text-align: center;">Social Media</li>
-				<li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
-				<li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
-				<li class="list-group-item" style="text-align: center;">Real- time Systems</li>
-				<li class="list-group-item" style="text-align: center;">Real- time Analytics</li>
-				<li class="list-group-item" style="text-align: center;">Autonomous Agents</li>
-				<li class="list-group-item" style="text-align: center;">Security and Information Assurance</li>
-				<li class="list-group-item" style="text-align: center;">Robotics</li>
-				<li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
-				<li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
-				<li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
-			</ul>
-	</div>
+        <h2>Paper submission guidelines/Call for Papers</h2>
+        <p>Authors are invited to submit full papers for
+            consideration (maximum 10 pages) in SCI 2020.
+            Submission of paper must be original and should
+            not have been previously published or under consideration
+            for publication. All papers will be sent for peer review and the corresponding
+            author will be notified of the outcome of the review process. The proceedings of the conference
+            will expected to be published by Smart Innovation Systems and Technologies Series,
+            Springer (Approved). Extended versions of selected best papers will expected to be appear
+            in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
+            must register for the conference. All submissions are to be done electronically through easychair link.</p>
+        <ul class="list-group">
+            <li class="list-group-item" style="text-align: center;">Conference Focus Areas</li>
+            <li class="list-group-item" style="text-align: center;">Approximate Computing</li>
+            <li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
+            <li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
+            <li class="list-group-item" style="text-align: center;">Intelligent Control Agents</li>
+            <li class="list-group-item" style="text-align: center;">Optimization Techniques</li>
+            <li class="list-group-item" style="text-align: center;">Intelligent Agents</li>
+            <li class="list-group-item" style="text-align: center;">Soft Computing Techniques</li>
+            <li class="list-group-item" style="text-align: center;">Parallel & Scalable Computing</li>
+            <li class="list-group-item" style="text-align: center;">Internet of Things</li>
+            <li class="list-group-item" style="text-align: center;">Cloud & Fog Computing</li>
+            <li class="list-group-item" style="text-align: center;">Mobile Computing & Ad hoc Networks</li>
+            <li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
+            <li class="list-group-item" style="text-align: center;">Stream Mining</li>
+            <li class="list-group-item" style="text-align: center;">Social Media</li>
+            <li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
+            <li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
+            <li class="list-group-item" style="text-align: center;">Real- time Systems</li>
+            <li class="list-group-item" style="text-align: center;">Real- time Analytics</li>
+            <li class="list-group-item" style="text-align: center;">Autonomous Agents</li>
+            <li class="list-group-item" style="text-align: center;">Security and Information Assurance</li>
+            <li class="list-group-item" style="text-align: center;">Robotics</li>
+            <li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
+            <li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
+            <li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
+        </ul>
+    </div>
     <!--================Contact Area =================-->
 
     <!--================ start footer Area  =================-->
@@ -172,8 +175,8 @@
                         <h6 class="footer_title">Contact Us</h6>
                         Vasavi College of Engineering<br />
                         <em><small> (Autonomous)<br /></small></em>
-                        <p>Affiliated to Osmania University, Hyderabad </p> 
-                        <br/>Approved by AICTE, New Delhi<br />
+                        <p>Affiliated to Osmania University, Hyderabad </p>
+                        <br />Approved by AICTE, New Delhi<br />
                         9-5-81, Ibrahimbagh<br />
                         Hyderabad - 500 031<br />
                         Telangana, India<br /><br />
@@ -219,7 +222,9 @@
             </div>
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-md-8 footer-text m-0">
-                    Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
+                    Ibrahimbagh, Hyderabad, India. All
                     Rights Reserved.</p>
                 <div class="col-lg-4 col-md-4 footer-social">
                     <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
