--- a/committees.html
+++ b/committees.html
@@ -23,67 +23,70 @@
 
 <body>
 
-   <!--================Header Menu Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container box_1620">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					
-					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-								</ul>
-							</li>
-							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							
-							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-								</ul>
+    <!--================Header Menu Area =================-->
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+
+                    <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">About</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                                </ul>
+                            </li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+                                    Venue</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+
+                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+                            <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Register</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
-							<!-- <li class="nav-item submenu dropdown">
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-						</ul>
-						<!-- <ul class="nav navbar-nav navbar-right">
+                        </ul>
+                        <!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================Header Menu Area =================-->
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!--================Header Menu Area =================-->
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -208,10 +211,10 @@
                 </tr>
                 <tr>
                     <th scope="row">16</th>
-                    <td>Dr. Badrinath  G Srinivas</td>
+                    <td>Dr. Badrinath G Srinivas</td>
                     <td>Research Scientist - III, Amazon Development Center, Hyderabad</td>
                 </tr>
-                            </tbody>
+            </tbody>
         </table>
 
         <br />
@@ -240,27 +243,27 @@
                     <th scope="row">4</th>
                     <td>Dr. P.V.Sudha</td>
                     <td>Associate Professor, OU</td>
-                </tr>                
+                </tr>
                 <tr>
                     <th scope="row">5</th>
                     <td>Dr. M.A.Hameed</td>
                     <td>Assistant Professor, OU</td>
-                </tr>                
+                </tr>
                 <tr>
                     <th scope="row">6</th>
                     <td>Dr. Phani Kumar</td>
                     <td>HOD, CSE, Gitam University</td>
-                </tr>                
+                </tr>
                 <tr>
                     <th scope="row">7</th>
                     <td>Dr.B.Sujatha</td>
                     <td>Assistant Professor, CSED, OU</td>
-                </tr>                
+                </tr>
                 <tr>
                     <th scope="row">8</th>
                     <td>Dr.Shashidhar G Koolagudi</td>
                     <td>Associate Professor, CSED, NITK</td>
-                </tr>                
+                </tr>
                 <tr>
                     <th scope="row">10</th>
                     <td>Dr.R.Gururaj</td>
@@ -338,7 +341,7 @@
                     <th scope="row">5</th>
                     <td>Dr. V. Sireesha</td>
                     <td>Assistant Professor, CSED, VCE</td>
-                </tr>                
+                </tr>
             </tbody>
         </table>
 
@@ -375,12 +378,12 @@
                     <th scope="row">6</th>
                     <td>C. Gireesh</td>
                     <td>Assistant Professor, CSED, VCE</td>
-                </tr>             
+                </tr>
                 <tr>
                     <th scope="row">7</th>
                     <td>T. Jalaja</td>
                     <td>Assistant Professor, CSED, VCE</td>
-                </tr>   
+                </tr>
                 <tr>
                     <th scope="row">8</th>
                     <td>I. Navakanth</td>
@@ -420,22 +423,21 @@
                     <div class="single-footer-widget tp_widgets">
                         <h6 class="footer_title">Contact Us</h6>
                         Vasavi College of Engineering<br />
-                        <em><small> (Private Un-aided Non-minority
-                                Autonomous Institution)<br /></small></em>
-                        Affiliated to Osmania University, Hyderabad <br />
-                        Approved by AICTE, New Delhi<br />
+                        <em><small> (Autonomous)<br /></small></em>
+                        <p>Affiliated to Osmania University, Hyderabad </p>
+                        <br />Approved by AICTE, New Delhi<br />
                         9-5-81, Ibrahimbagh<br />
                         Hyderabad - 500 031<br />
                         Telangana, India<br /><br />
 
-                        Tel: +91 40 23146003<br />
-                        Fax: +91 40 23146090<br /> <br />
+                        Tel: +91 40 23146020<br />
+                        Tel: +91 40 23146021<br /> <br />
 
                         <!-- <a
-                                   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
-                                       class="__cf_email__"
-                                       data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-                        Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
+							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
+								   class="__cf_email__"
+								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
+                        Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
                     </div>
                 </div>
 
@@ -469,7 +471,9 @@
             </div>
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-md-8 footer-text m-0">
-                    Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
+                    Ibrahimbagh, Hyderabad, India. All
                     Rights Reserved.</p>
                 <div class="col-lg-4 col-md-4 footer-social">
                     <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
