--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,8 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="mailto:confcse@gmail.com">EMAIL US</a></h6>
+                            <h6>EMAIL US</h6>
+                            <p><a href="mailto:confcse@gmail.com">Conference Team</a></p>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
@@ -216,7 +217,7 @@
             </div>
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-md-8 footer-text m-0">
-                    Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
                     Rights Reserved.</p>
                 <div class="col-lg-4 col-md-4 footer-social">
                     <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
